# security_asset

./: .gitignore  BUILD.gn  Cargo.toml  README.en.md  README.md  README_zh.md  a.diff  asset.gni  bundle.json  config.gni  hisysevent.yaml  rustfmt.toml  ticket生成和验证测试用例场景.md
frameworks/asset/os_dependency/memory/: BUILD.gn
frameworks/c/system_api/: BUILD.gn
frameworks/c/system_api/src/: asset_batch.cpp  asset_system_api.c
frameworks/js/ani/: BUILD.gn
frameworks/js/ani/ets/: @ohos.security.asset.ets
frameworks/js/ani/inc/: asset_ani_add.h  asset_ani_base.h  asset_ani_common.h  asset_ani_post_query.h  asset_ani_pre_query.h  asset_ani_query.h  asset_ani_query_sync_result.h  asset_ani_remove.h  asset_ani_update.h
frameworks/js/ani/src/: asset_ani_add.cpp  asset_ani_base.cpp  asset_ani_common.cpp  asset_ani_impl.cpp  asset_ani_post_query.cpp  asset_ani_pre_query.cpp  asset_ani_query.cpp  asset_ani_query_sync_result.cpp  asset_ani_remove.cpp  asset_ani_update.cpp
frameworks/os_dependency/openssl/: BUILD.gn
frameworks/os_dependency/openssl/inc/: openssl_wrapper.h
frameworks/os_dependency/openssl/src/: openssl_wrapper.c
frameworks/secure_access_fence/inner_api/ipc/: BUILD.gn  Cargo.toml  ISecureAccessFence.idl  SecureAccessFenceType.idl
interfaces/inner_api/c/: BUILD.gn
interfaces/inner_api/c/inc/: asset_system_api.h  asset_system_type.h  sec_asset_api.h  sec_asset_type.h
interfaces/inner_api/c/src/: asset_system_api.c  sec_asset_api.c
interfaces/inner_kits/rs/: BUILD.gn  Cargo.toml
interfaces/inner_kits/rs/asset/: BUILD.gn  Cargo.toml
interfaces/inner_kits/rs/secure_access_fence/: BUILD.gn  Cargo.toml
interfaces/inner_kits/rs/src/: empty.rs  full.rs  lib.rs  plugin_interface.rs  timeout_feature.c
services/asset/core_service/: BUILD.gn  Cargo.toml
services/asset/core_service/src/: common_event.rs  data_size_mod.rs  lib.rs  operations.rs  stub.rs  sys_event.rs  upgrade_ce.rs  upgrade_operator.rs
services/asset/crypto_manager/: BUILD.gn  Cargo.toml
services/asset/crypto_manager/src/: crypto.rs  crypto_manager.rs  db_key_operator.rs  huks_wrapper.h  lib.rs  secret_key.rs
services/asset/db_operator/: BUILD.gn  Cargo.toml
services/asset/db_operator/src/: common.rs  database.rs  database_file_upgrade.rs  database_util.rs  process_batch_data.rs  sqlite3_wrapper.c  statement.rs  table.rs  types.rs
services/asset/plugin/: BUILD.gn  Cargo.toml
services/asset/plugin/src/: asset_plugin.rs  lib.rs
services/common/: BUILD.gn  Cargo.toml
services/common/src/: calling_info.rs  counter.rs  lib.rs  process_info.rs  task_manager.rs
services/core_service/: BUILD.gn  Cargo.toml
services/core_service/src/: common_event.rs  counter.rs  data_size_mod.rs  database_key.rs  lib.rs  lib.rs.rej  listener.rs  operations.rs  stub.rs  sys_event.rs  trace_scope.rs  unload_handler.rs  upgrade_ce.rs  upgrade_operator.rs
services/core_service/src/common_event/: listener.rs  listener.rs.rej  start_event.rs
services/core_service/src/operations/: common.rs  operation_add.rs  operation_add.rs.rej  operation_batch_add.rs  operation_batch_remove.rs  operation_batch_update.rs  operation_post_query.rs  operation_pre_query.rs  operation_pre_query.rs.rej  operation_query.rs  operation_query.rs.rej  operation_query_sync_result.rs  operation_remove.rs  operation_remove.rs.rej  operation_update.rs  operation_update.rs.rej
services/crypto_manager/: BUILD.gn  Cargo.toml
services/crypto_manager/src/: crypto.rs  crypto_manager.rs  db_key_operator.rs  huks_wrapper.c  huks_wrapper.h  lib.rs  secret_key.rs
services/db_key_operator/: BUILD.gn  Cargo.toml
services/db_key_operator/src/: lib.rs
services/db_operator/: BUILD.gn  Cargo.toml
services/db_operator/src/: common.rs  database.rs  database.rs.rej  database_file_upgrade.rs  database_util.rs  lib.rs  process_batch_data.rs  sqlite3_wrapper.c  statement.rs  table.rs  transaction.rs  types.rs
services/db_operator/src/common/: argument_check.rs  operation_add_common.rs  permission_check.rs
services/db_operator/src/test/: lib.rs  test_database.rs  test_table.rs
services/os_dependency/: BUILD.gn
services/os_dependency/inc/: access_token_wrapper.h  bms_wrapper.h  data_share_wrapper.h  data_size_wrapper.h  file_operator_wrapper.h  memory_manager_wrapper.h  os_account_wrapper.h  permission_check_wrapper.h  system_ability_wrapper.h  system_event_wrapper.h
services/os_dependency/src/: access_token_wrapper.cpp  bms_wrapper.cpp  data_share_wrapper.cpp  data_size_wrapper.cpp  file_operator_wrapper.cpp  memory_manager_wrapper.cpp  os_account_wrapper.cpp  permission_check_wrapper.cpp  system_ability_wrapper.cpp  system_event_wrapper.cpp
services/plugin/: BUILD.gn  Cargo.toml
services/plugin/src/: asset_plugin.rs  asset_plugin.rs.rej  lib.rs
services/secure_access_fence/core_service/: BUILD.gn  Cargo.toml
services/secure_access_fence/core_service/include/: secure_access_fence_ipc.h  secure_access_fence_service.h
services/secure_access_fence/core_service/src/: lib.rs  metrics_macro.rs  operations.rs  stub.rs  wrapper.rs
services/secure_access_fence/plugin/: BUILD.gn  Cargo.toml
services/secure_access_fence/plugin/src/: lib.rs  saf_plugin.rs
test/secure_access_fence/agent_fence/: BUILD.gn
test/secure_access_fence/agent_fence/inc/: mock_permission.h  saf_agent_fence_grant_tool_permissions_by_user_local_test.h  saf_agent_fence_no_permission_test.h  saf_agent_fence_request_tool_permissions_local_test.h  saf_agent_fence_screen_lock_hap_identity_test.h  saf_agent_fence_screen_lock_test.h  saf_agent_fence_test.h  saf_permission_change.h
test/secure_access_fence/agent_fence/src/: saf_agent_fence_gen_and_ver_ticket_test.cpp  saf_agent_fence_gen_and_ver_ticket_test_manual.cpp  saf_agent_fence_grant_tool_permissions_by_user_local_test.cpp  saf_agent_fence_grant_tool_permissions_by_user_test.cpp  saf_agent_fence_no_permission_test.cpp  saf_agent_fence_query_cmd_no_permission_test.cpp  saf_agent_fence_query_cmd_permission_test.cpp  saf_agent_fence_screen_lock_test.cpp  (+6 more)
test/unittest/module_test/: BUILD.gn  Cargo.toml
(+401 files in other folders)
