# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "frameworks/asset/definition",
    "frameworks/asset/ipc",
    "frameworks/asset/os_dependency/log",
    "frameworks/asset/utils",
    "frameworks/secure_access_fence/definition",
    "frameworks/secure_access_fence/ipc",
    "frameworks/secure_access_fence/os_dependency/log",
    "interfaces/inner_kits/c/asset",
    "interfaces/inner_kits/plugin_interface/asset",
    "interfaces/inner_kits/rs/asset",
    "interfaces/inner_kits/plugin_interface/secure_access_fence",
    "interfaces/inner_kits/rs/secure_access_fence",
    "services/asset/common",
    "services/asset/core_service",
    "services/asset/crypto_manager",
    "services/asset/db_operator",
    "services/asset/plugin",
    "services/secure_access_fence/common",
    "services/secure_access_fence/core_service",
    "services/secure_access_fence/plugin",
    "test/unittest/inner_kits_rust",
    "test/unittest/module_test"
]
