# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

ohos_rust_static_library("asset_common") {
  sources = [ "src/lib.rs" ]
  deps = [
    "../../frameworks/definition:asset_definition",
    "../../frameworks/os_dependency/log:asset_log",
    "../os_dependency:asset_os_dependency",
  ]
  external_deps = [
    "ipc:ipc_rust",
    "ylong_runtime:ylong_runtime",
  ]
  crate_name = "asset_common"
  crate_type = "rlib"
  subsystem_name = "security"
  part_name = "asset"
}

module_output_path = "asset/asset"

ohos_rust_unittest("asset_calling_info_test") {
  module_out_path = module_output_path
  sources = [ "src/lib.rs" ]
  deps = [
    "../../frameworks/definition:asset_definition",
    "../../frameworks/os_dependency/log:asset_log",
    "../os_dependency:asset_os_dependency",
  ]
  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_rust",
    "ylong_runtime:ylong_runtime",
  ]
  subsystem_name = "security"
  part_name = "asset"
}
