# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_rust_shared_library("asset_service") {
  sources = [ "src/lib.rs" ]
  deps = [
    "../../etc/init:asset_service.rc",
    "../../frameworks/definition:asset_definition",
    "../../frameworks/ipc:asset_ipc",
    "../../frameworks/os_dependency/file:asset_file_operator",
    "../../frameworks/os_dependency/log:asset_log",
    "../../frameworks/utils:asset_utils",
    "../../interfaces/inner_api/rs:asset_sdk_rust",
    "../common:asset_common",
    "../crypto_manager:asset_crypto_manager",
    "../db_operator:asset_db_operator",
    "../os_dependency:asset_os_dependency",
    "../plugin:asset_plugin",
    "//third_party/rust/crates/lazy-static.rs:lib",
  ]

  external_deps = [
    "hilog:hilog_rust",
    "hilog:libhilog",
    "hisysevent:hisysevent_rust",
    "hitrace:hitrace_meter_rust",
    "ipc:ipc_rust",
    "safwk:system_ability_fwk_rust",
    "samgr:samgr_rust",
    "ylong_runtime:ylong_runtime",
  ]

  crate_name = "asset_service"
  crate_type = "dylib"
  subsystem_name = "security"
  part_name = "asset"
}
