# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

ohos_rust_static_library("asset_crypto_manager") {
  sources = [ "src/lib.rs" ]
  deps = [
    ":asset_huks_wrapper",
    "../../frameworks/definition:asset_definition",
    "../../frameworks/os_dependency/file:asset_file_operator",
    "../../frameworks/os_dependency/log:asset_log",
    "../../frameworks/os_dependency/openssl:asset_openssl_wrapper",
    "../../frameworks/utils:asset_utils",
    "../common:asset_common",
  ]
  external_deps = [
    "huks:libhukssdk",
    "ipc:ipc_rust",
  ]

  crate_name = "asset_crypto_manager"
  crate_type = "rlib"
  subsystem_name = "security"
  part_name = "asset"
}

ohos_static_library("asset_huks_wrapper") {
  include_dirs = [
    "inc",
    "../../interfaces/kits/c/inc",
  ]
  sources = [ "src/huks_wrapper.c" ]
  deps = [ "../../frameworks/os_dependency/memory:asset_mem" ]
  external_deps = [
    "hilog:libhilog",
    "huks:libhukssdk",
  ]
  subsystem_name = "security"
  part_name = "asset"
}
