# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_rust_static_library("asset_db_key_operator") {
  sources = [ "src/lib.rs" ]
  deps = [
    "../../../../../third_party/rust/crates/rust-openssl/openssl:lib",
    "../../frameworks/definition:asset_definition",
    "../../frameworks/os_dependency/file:asset_file_operator",
    "../../frameworks/os_dependency/log:asset_log",
    "../common:asset_common",
    "../crypto_manager:asset_crypto_manager",
  ]

  crate_name = "asset_db_key_operator"
  crate_type = "rlib"
  subsystem_name = "security"
  part_name = "asset"
}
