# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "asset/asset_UT_test"

ohos_rust_static_library("asset_db_operator") {
  sources = [ "src/lib.rs" ]
  deps = [
    ":asset_sqlite3_wrapper",
    "../../frameworks/definition:asset_definition",
    "../../frameworks/os_dependency/log:asset_log",
    "../constants:asset_constants",
  ]

  crate_name = "asset_db_operator"
  crate_type = "rlib"
  subsystem_name = "security"
  part_name = "asset"
}

ohos_rust_unittest("asset_db_operator_test") {
  module_out_path = module_output_path
  sources = [ "src/lib.rs" ]
  deps = [
    ":asset_sqlite3_wrapper",
    "../../frameworks/definition:asset_definition",
    "../../frameworks/os_dependency/log:asset_log",
    "../constants:asset_constants",
  ]
  subsystem_name = "security"
  part_name = "asset"
}

ohos_static_library("asset_sqlite3_wrapper") {
  sources = [ "src/sqlite3_wrapper.c" ]
  external_deps = [ "sqlite:sqlite" ]
  subsystem_name = "security"
  part_name = "asset"
}
