# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "asset_db_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset_common = { path = "../common" }
asset_crypto_manager = { path = "../crypto_manager" }
asset_definition = { path = "../../frameworks/definition" }
asset_log = { path = "../../frameworks/os_dependency/log" }
asset_file_operator = { path = "../../frameworks/os_dependency/file" }
asset_utils = { path = "../../frameworks/utils" }
lazy_static = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
ylong_json = { git = "https://gitcode.com/openharmony/commonlibrary_rust_ylong_json.git" }