# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/asset/config.gni")
import("//build/ohos.gni")

ohos_static_library("asset_os_dependency") {
  include_dirs = [
    "inc",
    "../../frameworks/os_dependency/log/inc",
    "../../interfaces/kits/c/inc",
  ]
  sources = [
    "src/access_token_wrapper.cpp",
    "src/bms_wrapper.cpp",
    "src/data_share_wrapper.cpp",
    "src/memory_manager_wrapper.cpp",
    "src/os_account_wrapper.cpp",
    "src/system_ability_wrapper.cpp",
    "src/system_event_wrapper.cpp",
    "src/file_operator_wrapper.cpp",
  ]
  deps = [ "../../frameworks/os_dependency/memory:asset_mem" ]
  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "memmgr:memmgrclient",
    "hilog:libhilog",
    "netmanager_base:net_conn_manager_if",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]

  cflags = [
    "-DASSET_UPGRADE_HAP_CONFIG=${asset_split_hap_list}",
    "-DASSET_CE_UPGRADE_CONFIG=\"${asset_ce_upgrade_list}\"",
  ]
  subsystem_name = "security"
  part_name = "asset"
}
