# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("asset_config") {
  include_dirs = [ "../../../interfaces/inner_kits/c/inc" ]
}

ohos_shared_library("asset_sdk") {
  public_configs = [ ":asset_config" ]
  sources = [ "src/asset_system_api.c" ]
  deps = [
    "../../../interfaces/inner_kits/c:asset_sdk_ffi",
    "../../os_dependency/log:asset_log",
    "../../os_dependency/memory:asset_mem",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }
  cflags = [
    "-Wall",
    "-Werror",
    "-fPIC",
  ]

  subsystem_name = "security"
  part_name = "asset"
}
