# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")

ohos_shared_library("asset_ani") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }

  include_dirs = [
    "../utils/inc",
    "inc",
  ]

  sources = [
    "src/asset_ani_add.cpp",
    "src/asset_ani_common.cpp",
    "src/asset_ani_base.cpp",
    "src/asset_ani_post_query.cpp",
    "src/asset_ani_pre_query.cpp",
    "src/asset_ani_query.cpp",
    "src/asset_ani_remove.cpp",
    "src/asset_ani_update.cpp",
    "src/asset_ani_query_sync_result.cpp",
    "src/asset_ani_impl.cpp",
    "../utils/src/asset_api_check.cpp",
  ]

  deps = [
    "../../os_dependency/memory:asset_mem",
    "../../os_dependency/log:asset_log",
    "../../c/system_api:asset_sdk",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
    "runtime_core:libarkruntime",
  ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]

  subsystem_name = "security"
  part_name = "asset"
}

generate_static_abc("security_asset_ani") {
  base_url = "./ets"
  files = [ "./ets/@ohos.security.asset.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/security_asset_ani.abc"
}

ohos_prebuilt_etc("asset_ani_abc_etc") {
  source = "$target_out_dir/security_asset_ani.abc"
  module_install_dir = "framework"
  part_name = "asset"
  subsystem_name = "security"
  deps = [":security_asset_ani"]
}

group("asset_ani_package") {
  deps = [
    ":asset_ani_abc_etc",
    ":asset_ani",
  ]
}