# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("asset_config") {
  include_dirs = [
    "inc",
    "../log/inc",
  ]
}

ohos_static_library("openssl_wrapper") {
  public_configs = [ ":asset_config" ]
  sources = [ "src/openssl_wrapper.c" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "openssl:libcrypto_shared",
  ]
  subsystem_name = "security"
  part_name = "asset"
}
