# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/asset/config.gni")
import("//build/ohos.gni")

ohos_rust_shared_library("asset_service") {
  sources = [ "src/lib.rs" ]
  deps = [
    "../../../etc/init:asset_service.rc",
    "../../../frameworks/asset/definition:asset_definition",
    "../../../frameworks/asset/ipc:asset_ipc",
    "../../../frameworks/asset/os_dependency/file:asset_file_operator",
    "../../../frameworks/asset/os_dependency/log:asset_log",
    "../../../frameworks/asset/utils:asset_utils",
    "../../../interfaces/inner_kits/rs/asset:asset_sdk_rust",
    "../../../interfaces/inner_kits/plugin_interface/asset:asset_plugin_interface_rust",
    "../common:asset_common",
    "../crypto_manager:asset_crypto_manager",
    "../db_operator:asset_db_operator",
    "../os_dependency:asset_os_dependency",
    "../plugin:asset_plugin",
    "//third_party/rust/crates/lazy-static.rs:lib",
  ]

  rustflags = [ "-C", "lto=thin", "-C", "debuginfo=0" ]
  if (enable_local_test) {
    rustflags += [ "--cfg", "feature=\"AssetTest\"", ]
  }

  external_deps = [
    "hilog:hilog_rust",
    "hilog:libhilog",
    "hisysevent:hisysevent_rust",
    "hitrace:hitrace_meter_rust",
    "ipc:ipc_rust",
    "safwk:system_ability_fwk_rust",
    "samgr:samgr_rust",
    "ylong_runtime:ylong_runtime",
    "ylong_json:lib",
  ]

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }

  crate_name = "asset_service"
  crate_type = "dylib"
  subsystem_name = "security"
  part_name = "asset"
}
