# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/asset/config.gni")
import("//build/ohos.gni")

ohos_rust_static_library("asset_plugin") {
  sources = [ "src/lib.rs" ]
  deps = [
    "../../../frameworks/asset/definition:asset_definition",
    "../../../frameworks/asset/os_dependency/file:asset_file_operator",
    "../../../frameworks/asset/os_dependency/log:asset_log",
    "../../../frameworks/asset/utils:asset_utils",
    "../../../interfaces/inner_kits/rs/asset:asset_sdk_rust",
    "../../../interfaces/inner_kits/plugin_interface/asset:asset_plugin_interface_rust",
    "../os_dependency:asset_os_dependency",
    "../common:asset_common",
    "../db_operator:asset_db_operator",
    "../crypto_manager:asset_crypto_manager",
    "//third_party/rust/crates/libloading:lib",
  ]

  external_deps = [
    "ylong_runtime:ylong_runtime",
  ]

  crate_name = "asset_plugin"
  crate_type = "rlib"
  subsystem_name = "security"
  part_name = "asset"
}
